# mcve_avr

./: Makefile  README.md  cmake_run_cmd.txt
cmake/modules/: avr.cmake
cmake/toolchain/: avr.cmake
cmake/toolchain/common/: avr-gcc.cmake
mcve/: CMakeLists.txt
mcve/mcve/: CMakeLists.txt
mcve/mcve/src/: mcve.cpp
